google-site verification

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,7 @@
     }
   </style>
   <title>React App</title>
+  <meta name="google-site-verification" content="nIaVpKVWhD2x5s0bMxZSv2DuTtgn_3lLyZ5_sNPGYPY" />
 </head>
 
 <body>
